src/components/text-area/_text-area.scss
//-----------------------------
// Text area
//-----------------------------

@import '../../globals/scss/vars';
@import '../../globals/scss/theme';
@import '../../globals/scss/colors';
@import '../../globals/scss/typography';
@import '../../globals/scss/spacing';
@import '../../globals/scss/css--reset';
@import '../../globals/scss/helper-mixins';
@import '../../globals/scss/import-once';
@import '../form/form';

@mixin text-area {
  .#{$prefix}--text-area {
    @include reset;
    @include font-family;
    @include typescale('zeta');
    width: 100%;
    min-width: 10rem;
    padding: $spacing-md;
    color: $text-01;
    background-color: $field-01;
    border: none;
    box-shadow: 0 1px 0 0 $ui-05;
    order: 2;
    resize: vertical;
    border-bottom: 1px solid transparent;

    & ~ .#{$prefix}--label {
      order: 1;
    }

    &:focus {
      outline: none;
      box-shadow: 0 2px 0 0 $brand-01;
    }

    &::placeholder {
      @include placeholder-colors;
    }

    &:disabled {
      opacity: 0.5;
      cursor: not-allowed;
    }

    &:disabled:hover {
      border: $input-border;
    }

    &[data-invalid],
    &[data-invalid]:focus {
      box-shadow: 0 2px 0 0 $support-01;
    }

    &:focus ~ .#{$prefix}--label {
      color: $brand-01;
    }

    &[data-invalid]:focus + .#{$prefix}--label {
      color: $support-01;
    }

    & ~ .#{$prefix}--form-requirement {
      order: 3;
      color: $support-01;
      font-weight: 400;
      margin-top: $spacing-2xs;

      &::before {
        display: none;
      }
    }
  }

  .#{$prefix}--text-area--light {
    background: $field-02;
  }

  // Skeleton State
  #{$prefix}--text-area.#{$prefix}--skeleton {
    @include skeleton;
    height: rem(100px);

    &::-webkit-input-placeholder {
      color: transparent;
    }
  }
}

@mixin text-area--x {
  .#{$prefix}--text-area {
    @include reset;
    @include typescale('zeta');
    @include focus-outline('reset');
    background-color: $field-01;
    width: 100%;
    min-width: 10rem;
    padding: $spacing-md;
    color: $text-01;
    order: 2;
    resize: vertical;
    border: none;
    border-bottom: 1px solid $ui-04;
    transition: $transition--base all;
  }

  .#{$prefix}--text-area:hover {
    background-color: $hover-field;
  }

  .#{$prefix}--text-area:focus,
  .#{$prefix}--text-area:active {
    @include focus-outline('outline');
  }

  .#{$prefix}--text-area::-webkit-input-placeholder {
    @include placeholder-colors;
  }

  //-----------------------------
  // Disabled & Error icon spacing
  //-----------------------------
  .#{$prefix}--text-area:disabled,
  .#{$prefix}--text-area[data-invalid],
  .#{$prefix}--text-area:invalid,
  .#{$prefix}--text-area[data-loading] {
    padding-right: rem(40px);
    background-repeat: no-repeat;
    background-position: right 8px bottom 50%;
  }

  //-----------------------------
  // Disabled
  //-----------------------------
  .#{$prefix}--text-area:disabled {
    cursor: not-allowed;
    // THIS SHOULD BE MOVED TO AN INLINE SVG IN NEXT MAJOR RELEASE
    background-image: url("data:image/svg+xml;charset=UTF-8, %3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='16' height='16' class='ibm-icons ibm-icons--error--filled' fill='%23bebebe'%3e%3cpath d='M6.95 26.66A14 14 0 0 0 26.67 6.93zM16 2A14 14 0 0 0 5.35 25.07L25.08 5.34A13.93 13.93 0 0 0 16 2z'/%3e%3c/svg%3e");
    outline: none;
    background-color: $disabled-background-color;
    border-bottom: 1px solid transparent;
  }

  .#{$prefix}--text-area:disabled::-webkit-input-placeholder {
    color: $disabled;
  }

  //-----------------------------
  // Error
  //-----------------------------
  .#{$prefix}--text-area[data-invalid],
  .#{$prefix}--text-area:invalid {
    @include focus-outline('invalid');
    box-shadow: none;
    // THIS SHOULD BE MOVED TO AN INLINE SVG IN THE HTML IN NEXT MAJOR RELEASE
    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='16' height='16' class='ibm-icons ibm-icons--warning--filled' fill='%23da1e28'%3e%3cpath d='M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2zm-1 6h2v11h-2zm1 17a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 25z'/%3e%3c/svg%3e ");
  }

  // Skeleton State
  #{$prefix}--text-area.#{$prefix}--skeleton {
    @include skeleton;
    height: rem(100px);

    &::-webkit-input-placeholder {
      color: transparent;
    }
  }
}

@include exports('text-area') {
  @if feature-flag-enabled('components-x') {
    @include text-area--x;
  } @else {
    @include text-area;
  }
}

